kepler_equation_solution.ipynb

--- a/kepler_equation_solution.ipynb
+++ b/kepler_equation_solution.ipynb
@@ -71,7 +71,7 @@
         "*Перицентр* — это точка на орбите, ближайшая к центральному телу.\n",
         "***\n",
         "\n",
-        "Эксцентриситет орбиты $\\varepsilon$ — это числовая характеристика отклонения орбиты от круговой формы."
+        "**Эксцентриситет орбиты** $\\varepsilon$ — это числовая характеристика отклонения орбиты от круговой формы."
       ],
       "metadata": {
         "id": "HsbNsmboj6dG"
